[gd_scene load_steps=8 format=3 uid="uid://ca35jt2v4363h"]

[ext_resource type="Texture2D" uid="uid://1soacpg8f3jg" path="res://Assets/ui/popup_background.png" id="1_pwkex"]
[ext_resource type="Script" path="res://src/ui/inventory_popup.gd" id="1_to25t"]
[ext_resource type="FontFile" uid="uid://dn1d737hrtc4" path="res://Assets/fonts/NanumSquareRoundB.ttf" id="2_jhm8t"]
[ext_resource type="Texture2D" uid="uid://b5mdc5buxpvjf" path="res://Assets/ui/btn/close_btn_normal.png" id="3_17plf"]
[ext_resource type="Texture2D" uid="uid://b6qtkssjphuyx" path="res://Assets/ui/btn/close_btn_pressed.png" id="4_vueqr"]
[ext_resource type="Texture2D" uid="uid://cdo0nq1b2sca4" path="res://Assets/ui/inventory_slot.png" id="6_taaf4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38asp"]
bg_color = Color(0.894118, 0.894118, 0.894118, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
shadow_size = 2

[node name="InventoryPopup" type="CanvasLayer"]
script = ExtResource("1_to25t")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 481.0
offset_bottom = 695.0
size_flags_vertical = 0
mouse_force_pass_scroll_events = false

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -24.0
offset_top = 26.0
offset_right = 509.0
offset_bottom = 753.0
texture = ExtResource("1_pwkex")

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 178.0
offset_top = 111.0
offset_right = 306.0
offset_bottom = 157.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jhm8t")
theme_override_font_sizes/font_size = 32
text = "인벤토리"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseBtn" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 407.0
offset_top = 110.0
offset_right = 439.0
offset_bottom = 142.0
texture_normal = ExtResource("3_17plf")
texture_hover = ExtResource("4_vueqr")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 5.0
offset_top = 183.0
offset_right = 477.0
offset_bottom = 676.0
texture = ExtResource("1_pwkex")

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 60.0
offset_top = 59.0
offset_right = 410.0
offset_bottom = 437.0

[node name="GridContainer" type="GridContainer" parent="TextureRect/ScrollContainer"]
layout_mode = 2
columns = 5

[node name="TextureRect1" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect1"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect2" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect2"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect3" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect3"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect4" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect4"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect5" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect5"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect6" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect6"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect7" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect7"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect8" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect8"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect9" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect9"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect10" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect10"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect11" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect11"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect12" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect12"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect13" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect13"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect14" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect14"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect15" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect15"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect16" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect16"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect17" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect17"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect18" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect18"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect19" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect19"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect20" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect20"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect21" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect21"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect22" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect22"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect23" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect23"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect24" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect24"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect25" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect25"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect26" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect26"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect27" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect27"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect28" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect28"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect29" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect29"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect30" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect30"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect31" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect31"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect32" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect32"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect33" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect33"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect34" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect34"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect35" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect35"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect36" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect36"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect37" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect37"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect38" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect38"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect39" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect39"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect40" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_taaf4")

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/GridContainer/TextureRect40"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="BtnControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = 16.0
offset_right = 8.0
offset_bottom = 56.0

[node name="EquipmentBtn" type="Button" parent="BtnControl"]
layout_mode = 0
offset_left = 80.0
offset_top = 169.0
offset_right = 138.0
offset_bottom = 205.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jhm8t")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_38asp")
text = "장비"

[node name="ConsumptionBtn" type="Button" parent="BtnControl"]
layout_mode = 0
offset_left = 141.0
offset_top = 169.0
offset_right = 199.0
offset_bottom = 205.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jhm8t")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_38asp")
text = "소비"

[node name="EtcBtn" type="Button" parent="BtnControl"]
layout_mode = 0
offset_left = 202.0
offset_top = 169.0
offset_right = 260.0
offset_bottom = 205.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jhm8t")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_38asp")
text = "기타"

[connection signal="pressed" from="Control/CloseBtn" to="." method="_on_close_btn_pressed"]
[connection signal="pressed" from="BtnControl/EquipmentBtn" to="." method="_on_equipment_btn_pressed"]
[connection signal="pressed" from="BtnControl/ConsumptionBtn" to="." method="_on_consumption_btn_pressed"]
[connection signal="pressed" from="BtnControl/EtcBtn" to="." method="_on_etc_btn_pressed"]
